# RustWinRTPowershell

./: .gitignore  Cargo.toml  LICENSE  README.md
rs_winrt_sample/: Cargo.toml  README.md  build.rs  rs_winrt_sample.winmd
rs_winrt_sample/src/: bindings.rs  lib.rs  pure_rust_types.rs  rs_winrt_sample.idl  winrt_rust_types.rs
rs_winrt_sample_cs_ps/: GetBasicTestCommand.cs  rs_winrt_sample_cs_ps.csproj  rs_winrt_sample_cs_ps.sln
