[workspace]
resolver = "2"
members = [
    "rs_winrt_sample",
]

[profile.dev.package."*"]
opt-level = 0

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(windows_raw_dylib, windows_slim_errors)'] }

[workspace.dependencies]
cppwinrt = { version = "0.3.2", default-features = false }
windows = { version = "0.61.3", default-features = false }
windows-bindgen = { version = "0.62.1", default-features = false }
windows-core = { version = "0.61.2", default-features = false }
windows-link = { version = "0.1.3", default-features = false }
windows-collections = { version = "0.2.0", default-features = false }
