[package]
name = "rs_winrt_sample"
version = "0.1.0"
edition = "2024"

[lib]
name = "rs_winrt_sample"
crate-type = ["cdylib"]

[dependencies]
windows = { workspace = true, features = ["Win32_System_WinRT"] }
windows-collections.workspace = true
windows-core = { workspace = true }

[build-dependencies]
windows-bindgen = { workspace = true }
